这是最后一次修改了，接下来应该不会有太大的修改，开始写代码了ヾ(◍°∇°◍)ﾉﾞ

--- a/src/main/resources/templates/webapp/admin_add.html
+++ b/src/main/resources/templates/webapp/admin_add.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-<link rel="stylesheet" href="css/style.css" />
-<link href="assets/css/codemirror.css" rel="stylesheet" />
-<link rel="stylesheet" href="assets/css/ace.min.css" />
-<link rel="stylesheet" href="font/css/font-awesome.min.css" />
+<link href="../assets/css/bootstrap.min.css" rel="stylesheet" />
+<link rel="stylesheet" href="../css/style.css" />
+<link href="../assets/css/codemirror.css" rel="stylesheet" />
+<link rel="stylesheet" href="../assets/css/ace.min.css" />
+<link rel="stylesheet" href="../font/css/font-awesome.min.css" />
 <title>添加用户</title>
 </head>
 <body>
