--- a/src/main/resources/templates/webapp/forget.html
+++ b/src/main/resources/templates/webapp/forget.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 	<head lang="en">
 		<meta charset="utf-8" />
 		<title>forget</title>
-		<link rel="stylesheet" type="text/css" href="css/public.css"/>
-		<link rel="stylesheet" type="text/css" href="css/proList.css" />
-		<link rel="stylesheet" type="text/css" href="css/forget.css" />
+		<link rel="stylesheet" type="text/css" href="../css/public.css"/>
+		<link rel="stylesheet" type="text/css" href="../css/proList.css" />
+		<link rel="stylesheet" type="text/css" href="../css/forget.css" />
 	</head>
 	<body>
 		<!----------------------------------------order------------------>
