--- a/src/main/resources/templates/webapp/indexbackstage.html
+++ b/src/main/resources/templates/webapp/indexbackstage.html
@@ -6,12 +6,12 @@
 		<title>雅阁后台管理系统  </title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link  href="assets/css/bootstrap.min.css"  rel="stylesheet" />
-		<link rel="stylesheet"  href="assets/css/font-awesome.min.css" />
-		<link rel="stylesheet"  href="assets/css/ace.min.css" />
-		<link rel="stylesheet"  href="assets/css/ace-rtl.min.css" />
-		<link rel="stylesheet"  href="assets/css/ace-skins.min.css" />
-        <link rel="stylesheet"  href="css/style.css"/>
-		<link rel="stylesheet"  href="css/home.css"/>
+		<link rel="stylesheet"  href="../assets/css/font-awesome.min.css" />
+		<link rel="stylesheet"  href="../assets/css/ace.min.css" />
+		<link rel="stylesheet"  href="../assets/css/ace-rtl.min.css" />
+		<link rel="stylesheet"  href="../assets/css/ace-skins.min.css" />
+        <link rel="stylesheet"  href="../css/style.css"/>
+		<link rel="stylesheet"  href="../css/home.css"/>
 		<script src="assets/js/ace-extra.min.js"></script>
 		<script src="js/jquery-1.9.1.min.js"></script>
 		<script type="text/javascript">
@@ -37,9 +37,9 @@
 
 				<a href="indexbackstage.html" class="navbar-brand">
 					<h6>&nbsp;</h6>
-					<p style="font-size: 25px;">&nbsp;&nbsp;雅阁商城后台</p>
+					<p style="font-size: 25px;">&nbsp;&nbsp;雅阁商城</p>
 					<h6>&nbsp;</h6>
-						<p style="font-size: 25px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;管理系统</p>
+						<p style="font-size: 25px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;后台</p>
 					<!--
                 	作者：482753434@qq.com
                 	时间：2020-11-12
