--- a/src/main/resources/templates/webapp/Orderform.html
+++ b/src/main/resources/templates/webapp/Orderform.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="renderer" content="webkit|ie-comp|ie-stand" />
@@ -39,20 +39,16 @@
        <table class="table table-striped table-bordered table-hover" id="sample-table">
 		<thead>
 		 <tr>
-				<th width="25px"><label><input type="checkbox" class="ace"><span class="lbl"></span></label></th>
 				<th width="120px">订单编号</th>
-				<th width="250px">产品名称</th>
+				<th width="250px">用户名</th>
 				<th width="100px">总价</th>
-                <th width="100px">订单时间</th>				
-				<th width="180px">所属类型</th>
-                <th width="80px">数量</th>
+                <th width="100px">订单时间</th>
 				<th width="70px">状态</th>                
 				<th width="200px">操作</th>
 			</tr>
 		</thead>
 	<tbody>
      <tr>
-     <td><label><input type="checkbox" class="ace"><span class="lbl"></span></label></td>
      <td>20160705445622</td>
      <td class="order_product_name">
       <a href="#"><img src="products/p_1.jpg"  title="产品名称"/></a>
@@ -61,16 +57,12 @@
      </td>
      <td>456.5</td>
      <td>2016-7-5</td>
-     <td>食品</td>
-     <td>2</td>
       <td class="td-status"><span class="label label-success radius">准备发货</span></td>
      <td>
-     <a title="订单详细"  href="order_detailed.html"  class="btn btn-xs btn-info order_detailed" ><i class="fa fa-list bigger-120"></i></a> 
-     <a title="删除" href="javascript:;"  onclick="Order_form_del(this,'1')" class="btn btn-xs btn-warning" ><i class="fa fa-trash  bigger-120"></i></a>    
+     <a title="订单详细"  href="order_detailed.html"  class="btn btn-xs btn-info order_detailed" ><i class="fa fa-list bigger-120"></i></a>
      </td>
      </tr>
      <tr>
-     <td><label><input type="checkbox" class="ace"><span class="lbl"></span></label></td>
      <td>20160705445622</td>
      <td class="order_product_name">
       <a href="#"><img src="products/p_1.jpg"  title="产品名称"/></a>
@@ -79,16 +71,12 @@
      </td>
      <td>456.5</td>
      <td>2016-7-5</td>
-     <td>食品</td>
-     <td>2</td>
       <td class="td-status"><span class="label label-success radius">代发货</span></td>
      <td>
-     <a title="订单详细"  href="order_detailed.html"  class="btn btn-xs btn-info order_detailed" ><i class="fa fa-list bigger-120"></i></a> 
-     <a title="删除" href="javascript:;"  onclick="Order_form_del(this,'1')" class="btn btn-xs btn-warning" ><i class="fa fa-trash  bigger-120"></i></a>    
+     <a title="订单详细"  href="order_detailed.html"  class="btn btn-xs btn-info order_detailed" ><i class="fa fa-list bigger-120"></i></a>
      </td>
      </tr>
      <tr>
-     <td><label><input type="checkbox" class="ace"><span class="lbl"></span></label></td>
      <td>20160705445622</td>
      <td class="order_product_name">
       <a href="#"><img src="products/p_1.jpg"  title="产品名称"/></a>
@@ -97,16 +85,12 @@
      </td>
      <td>456.5</td>
      <td>2016-7-5</td>
-     <td>食品</td>
-     <td>2</td>
       <td class="td-status"><span class="label label-success radius">代发货</span></td>
      <td>
-     <a title="订单详细"  href="order_detailed.html"  class="btn btn-xs btn-info order_detailed" ><i class="fa fa-list bigger-120"></i></a> 
-     <a title="删除" href="javascript:;"  onclick="Order_form_del(this,'1')" class="btn btn-xs btn-warning" ><i class="fa fa-trash  bigger-120"></i></a>    
+     <a title="订单详细"  href="order_detailed.html"  class="btn btn-xs btn-info order_detailed" ><i class="fa fa-list bigger-120"></i></a>
      </td>
      </tr>
      <tr>
-     <td><label><input type="checkbox" class="ace"><span class="lbl"></span></label></td>
      <td>20160705445622</td>
      <td class="order_product_name">
       <a href="#"><img src="products/p_1.jpg"  title="产品名称"/></a>
@@ -115,16 +99,12 @@
      </td>
      <td>456.5</td>
      <td>2016-7-5</td>
-     <td>食品</td>
-     <td>2</td>
       <td class="td-status"><span class="label label-success radius">代发货</span></td>
      <td>
-     <a title="订单详细"  href="order_detailed.html"  class="btn btn-xs btn-info order_detailed" ><i class="fa fa-list bigger-120"></i></a> 
-     <a title="删除" href="javascript:;"  onclick="Order_form_del(this,'1')" class="btn btn-xs btn-warning" ><i class="fa fa-trash  bigger-120"></i></a>    
+     <a title="订单详细"  href="order_detailed.html"  class="btn btn-xs btn-info order_detailed" ><i class="fa fa-list bigger-120"></i></a>
      </td>
      </tr>
      <tr>
-     <td><label><input type="checkbox" class="ace"><span class="lbl"></span></label></td>
      <td>20160705445622</td>
      <td class="order_product_name">
       <a href="#"><img src="products/p_5.jpg"  title="产品名称"/></a>
@@ -133,16 +113,12 @@
      </td>
      <td>456.5</td>
      <td>2016-7-5</td>
-     <td>食品</td>
-     <td>2</td>
       <td class="td-status"><span class="label label-success radius">代发货</span></td>
      <td> 
-     <a title="订单详细"  href="order_detailed.html"  class="btn btn-xs btn-info order_detailed" ><i class="fa fa-list bigger-120"></i></a> 
-     <a title="删除" href="javascript:;"  onclick="Order_form_del(this,'1')" class="btn btn-xs btn-warning" ><i class="fa fa-trash  bigger-120"></i></a>    
+     <a title="订单详细"  href="order_detailed.html"  class="btn btn-xs btn-info order_detailed" ><i class="fa fa-list bigger-120"></i></a>
      </td>
      </tr>
      <tr>
-     <td><label><input type="checkbox" class="ace"><span class="lbl"></span></label></td>
      <td>20160705445622</td>
      <td class="order_product_name">
       <a href="#"><img src="products/p_3.jpg"  title="产品名称"/></a>
@@ -151,12 +127,10 @@
      </td>
      <td>456.5</td>
      <td>2016-7-5</td>
-     <td>食品</td>
-     <td>2</td>
       <td class="td-status"><span class="label label-success radius">代发货</span></td>
      <td> 
      <a title="订单详细"  href="order_detailed.html"  class="btn btn-xs btn-info order_detailed" ><i class="fa fa-list bigger-120"></i></a> 
-     <a title="删除" href="javascript:;"  onclick="Order_form_del(this,'1')" class="btn btn-xs btn-warning" ><i class="fa fa-trash  bigger-120"></i></a>    
+
      </td>
      </tr>
      </tbody>
