--- a/src/main/resources/templates/webapp/administrator.html
+++ b/src/main/resources/templates/webapp/administrator.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="renderer" content="webkit|ie-comp|ie-stand" />
@@ -47,8 +47,7 @@
 				<div class="border clearfix">
 					<span class="l_f"> <a href="admin_add.html"
 						id="administrator_add" class="btn btn-warning"><i
-							class="fa fa-plus"></i> 添加管理员</a> <a href="javascript:ovid()"
-						class="btn btn-danger"><i class="fa fa-trash"></i> 批量删除</a>
+							class="fa fa-plus"></i> 添加管理员</a>
 					</span> <span class="r_f">共：<b>5</b>人
 					</span>
 				</div>
@@ -59,8 +58,6 @@
 						id="sample_table">
 						<thead>
 							<tr>
-								<th width="25px"><label><input type="checkbox"
-										class="ace" /><span class="lbl"></span></label></th>
 								<th width="80">序号</th>
 								<th width="250px">登录名</th>
 								<th width="100px">手机</th>
@@ -72,8 +69,6 @@
 
 							<c:forEach items="${adminp.records }" var="list" varStatus="vs">
 								<tr>
-									<td><label><input type="checkbox" class="ace" /><span
-											class="lbl"></span></label></td>
 									<td>${vs.count}</td>
 									<td>${list.userName }</td>
 									<td>${list.telephone }</td>
