--- a/src/main/resources/templates/webapp/picture-add.html
+++ b/src/main/resources/templates/webapp/picture-add.html
@@ -1,19 +1,20 @@
 <!DOCTYPE HTML>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8">
 <meta name="renderer" content="webkit|ie-comp|ie-stand">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
 <meta http-equiv="Cache-Control" content="no-siteapp" />
-<link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-<link rel="stylesheet" href="css/style.css"/>       
-<link href="assets/css/codemirror.css" rel="stylesheet">
+<link href="../assets/css/bootstrap.min.css" rel="stylesheet" />
+<link rel="stylesheet" href="../css/style.css"/>
+<link href="../assets/css/codemirror.css" rel="stylesheet">
 <link rel="stylesheet" href="assets/css/ace.min.css" />
-      <link rel="stylesheet" href="../../static/Widget/zTree/css/zTreeStyle/zTreeStyle.css" type="text/css">
-<link rel="stylesheet" href="assets/css/font-awesome.min.css" />
-<link href="../../static/Widget/icheck/icheck.css" rel="stylesheet" type="text/css" />
-<link href="../../static/Widget/webuploader/0.1.5/webuploader.css" rel="stylesheet" type="text/css" />
+	<link rel="stylesheet" href="../css/home.css" />
+      <link rel="stylesheet" href="../static/Widget/zTree/css/zTreeStyle/zTreeStyle.css" type="text/css">
+<link rel="stylesheet" href="../assets/css/font-awesome.min.css" />
+<link href="../static/Widget/icheck/icheck.css" rel="stylesheet" type="text/css" />
+<link href="../static/Widget/webuploader/0.1.5/webuploader.css" rel="stylesheet" type="text/css" />
 
 <title>新增商品</title>
 </head>
@@ -21,24 +22,30 @@
    <div class="page_right_style">
    <div class="type_title">添加商品</div>
 	<form action="commodity.do" method="post" class="form form-horizontal" id="form-article-add" enctype="multipart/form-data">
-		
-		<div class=" clearfix cl">
-			<div class="Add_p_s">
-			<label class="form-label col-2">产品名：</label>
-			<div class="formControls col-2"><input type="text" class="input-text" name="commodityName"></div>
-            </div>
-			<div class="Add_p_s">
-			 <label class="form-label col-2">类别编号：</label>
-			<select class="formControls col-2" name="categoryId">
-				<option class="input-text">-请选择-</option>
-				<option class="input-text" value="10000001">干花花艺</option>
-				<option class="input-text" value="10000002">抱枕靠垫</option>
-				<option class="input-text" value="10000003">墙饰挂壁</option>
-				<option class="input-text" value="10000004">蜡艺香薰</option>
-				<option class="input-text" value="10000005">创意家居</option>
-			</select>
-			</div>
-            <div class="Add_p_s">
+
+			<div class=" clearfix cl">
+				<div class="Add_p_s">
+					<label class="form-label col-2">产品名：</label>
+					<div class="formControls col-2"><input type="text" class="input-text" name="commodityName"></div>
+				</div>
+				<div class="Add_p_s">
+					<label class="form-label col-2">类别编号：</label>
+					<select class="formControls col-2" name="categoryId">
+						<option class="input-text">-请选择-</option>
+						<option class="input-text" value="10000001">干花花艺</option>
+						<option class="input-text" value="10000002">抱枕靠垫</option>
+						<option class="input-text" value="10000003">墙式壁挂·简约现代</option>
+						<option class="input-text" value="10000004">墙式壁挂·浓情欧式</option>
+						<option class="input-text" value="10000005">墙式壁挂·浪漫美式</option>
+						<option class="input-text" value="10000006">蜡艺香薰·香薰精油</option>
+						<option class="input-text" value="10000007">蜡艺香薰·复古香薰油</option>
+						<option class="input-text" value="10000008">创意家居·时尚</option>
+						<option class="input-text" value="10000009">创意家居·新颖</option>
+						<option class="input-text" value="10000010">创意家居·生活</option>
+					</select>
+				</div>
+
+				<div class="Add_p_s">
              <label class="form-label col-2">市场价格：</label>	
 			 <div class="formControls col-2"><input type="text" class="input-text" name="price" >元</div>
 			</div>
@@ -74,12 +81,12 @@
 <script src="assets/js/typeahead-bs2.min.js"></script>
 <script src="assets/layer/layer.js" type="text/javascript" ></script>
 <script src="assets/laydate/laydate.js" type="text/javascript"></script>
-<script type="text/javascript" src="../../static/Widget/My97DatePicker/WdatePicker.js"></script>
-<script type="text/javascript" src="../../static/Widget/icheck/jquery.icheck.min.js"></script>
-<script type="text/javascript" src="../../static/Widget/zTree/js/jquery.ztree.all-3.5.min.js"></script>
-<script type="text/javascript" src="../../static/Widget/Validform/5.3.2/Validform.min.js"></script>
-<script type="text/javascript" src="../../static/Widget/webuploader/0.1.5/webuploader.min.js"></script>
-<script type="text/javascript" src="../../static/Widget/ueditor/1.4.3/ueditor.config.js"></script>
+<script type="text/javascript" src="../Widget/My97DatePicker/WdatePicker.js"></script>
+<script type="text/javascript" src="../Widget/icheck/jquery.icheck.min.js"></script>
+<script type="text/javascript" src="../Widget/zTree/js/jquery.ztree.all-3.5.min.js"></script>
+<script type="text/javascript" src="../Widget/Validform/5.3.2/Validform.min.js"></script>
+<script type="text/javascript" src="../Widget/webuploader/0.1.5/webuploader.min.js"></script>
+<script type="text/javascript" src="../Widget/ueditor/1.4.3/ueditor.config.js"></script>
 <script src="js/lrtk.js" type="text/javascript" ></script>
 
 	<!--  <script>
