--- a/src/main/resources/templates/webapp/proDetail.html
+++ b/src/main/resources/templates/webapp/proDetail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 	<head>
 		<meta charset="UTF-8">
 		<title>详情页</title>
@@ -31,61 +31,8 @@
 				</div>
 				<ul class="clearfix" id="bott">
 					<li><a href="index.html">首页</a></li>
-					<li>
-						<a href="#">所有商品</a>
-						<div class="sList">
-							<div class="wrapper  clearfix">
-								<a href="paint.html">
-									<dl>
-										<dt><img src="img/nav1.jpg"/></dt>
-										<dd>浓情欧式</dd>
-									</dl>
-								</a>
-								<a href="paint.html">
-									<dl>
-										<dt><img src="img/nav2.jpg"/></dt>
-										<dd>浪漫美式</dd>
-									</dl>
-								</a>
-								<a href="paint.html">
-									<dl>
-										<dt><img src="img/nav3.jpg"/></dt>
-										<dd>雅致中式</dd>
-									</dl>
-								</a>
-								<a href="paint.html">
-									<dl>
-										<dt><img src="img/nav6.jpg"/></dt>
-										<dd>简约现代</dd>
-									</dl>
-								</a>
-								<a href="paint.html">
-									<dl>
-										<dt><img src="img/nav7.jpg"/></dt>
-										<dd>创意装饰</dd>
-									</dl>
-								</a>
-							</div>
-						</div>
-					</li>
-					<li>
-						<a href="flowerDer.html">装饰摆件</a>
-						<div class="sList2">
-							<div class="clearfix">
-								<a href="proList.html">干花花艺</a>
-								<a href="vase_proList.html">花瓶花器</a>
-							</div>
-						</div>
-					</li>
-					<li>
-						<a href="decoration.html">布艺软饰</a>
-						<div class="sList2">
-							<div class="clearfix">
-								<a href="zbproList.html">桌布罩件</a>
-								<a href="bzproList.html">抱枕靠垫</a>
-							</div>
-						</div>
-					</li>
+					<li><a href="flowerDer.html">装饰摆件</a></li>
+					<li><a href="decoration.html">布艺软饰</a></li>
 					<li><a href="paint.html">墙式壁挂</a></li>
 					<li><a href="perfume.html">蜡艺香薰</a></li>
 					<li><a href="idea.html">创意家居</a></li>
@@ -124,21 +71,15 @@
 							<span>￥59.90</span>
 						</div>
 						<div class="proIntro">
-							<!-- <p>颜色分类</p>
-							<div class="smallImg clearfix categ">
-								<p class="fl"><img src="img/temp/prosmall01.jpg" alt="白瓷花瓶+20支快乐花" data-src="img/temp/proBig01.jpg"></p>
-								<p class="fl"><img src="img/temp/prosmall02.jpg" alt="白瓷花瓶+20支兔尾巴草" data-src="img/temp/proBig02.jpg"></p>
-								<p class="fl"><img src="img/temp/prosmall03.jpg" alt="20支快乐花" data-src="img/temp/proBig03.jpg"></p>
-								<p class="fl"><img src="img/temp/prosmall04.jpg" alt="20支兔尾巴草" data-src="img/temp/proBig04.jpg"></p>
-							</div> -->
+
 							<p>上架时间：<span>202011-18</span></p>
 							<p>库存数量：<span>2096</span>件</p>
-							<!-- <div class="num clearfix">
+							<div class="num clearfix">
 								<img class="fl sub" src="img/temp/sub.jpg">
 								<span class="fl" contentEditable="true">1</span>
 								<img class="fl add" src="img/temp/add.jpg">
-								<p class="please fl">请选择商品属性!</p>
-							</div> -->
+
+							</div>
 						</div>
 						<div class="btns clearfix">
 							<a href="order.html"><p class="buy fl">立即购买</p></a>
